--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ input:focus {
   font-size: 2rem;
   text-align: center;
   padding: 0.5rem 1rem 0 1rem;
+  cursor: pointer;
 }
 main {
   margin-top: 10rem;
